# cozytales-backend

./: Dockerfile  README.md  convert_audio2mp3.py  get_audio.py  get_audio_custom.py  get_text.py  prompts.py  pyproject.toml  requirements.txt  server.py
preloaded_texts/: text_anger_en.json  text_anger_es.json  text_anxiety_en.json  text_anxiety_es.json  text_sadness_en.json  text_sadness_es.json  text_story_en.json  text_story_es.json
