[tool.poetry]
name = "cozytales-backend"
version = "0.1.0"
description = ""
authors = ["Sebastian Schramm <schrammsm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
kokoro = "^0.9.4"
soundfile = "^0.13.1"
transformers = "^4.54.1"
timm = "^1.0.19"
pillow = "^11.3.0"


[tool.poetry.group.dev.dependencies]
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"